<resources>
    <string name="app_name">TrichTracker</string>
    <string name="title_dashboard">Data</string>
    <string name="title_activities">Activities</string>
    <string name="title_settings">Settings</string>
    <string name="title_support">Support</string>

    <!-- Tools -->

    <string name="title_tools">Tools</string>
    <string name="track_button">New Entry</string>
    <string name="assessment_button">New Assessment</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="entry_time">Entry Time</string>
    <string name="entry_date">Entry Date</string>
    <string name="entry_title">New Entry</string>
    <string name="location">Location:</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="next">Next</string>
    <string name="episode">Episode</string>
    <string name="urge">Urge</string>
</resources>