<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_tools">

    <fragment
        android:id="@+id/navigation_tools"
        android:name="com.example.trichtracker.ui.tools.ToolsFragment"
        android:label="@string/title_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/navigation_data"
        android:name="com.example.trichtracker.ui.data.DataFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_data" />

    <fragment
        android:id="@+id/navigation_activities"
        android:name="com.example.trichtracker.ui.activities.ActivitiesFragment"
        android:label="@string/title_activities"
        tools:layout="@layout/fragment_activities" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.trichtracker.ui.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>