<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tools.EntryActivity">

    <TextView
        android:id="@+id/entry_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/entry_title"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="108dp"
        android:text="@string/date"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        android:text="@string/time"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_track" />

    <TextView
        android:id="@+id/location_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        android:text="@string/location"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_track" />

    <Button
        android:id="@+id/date_picker_button"
        style="?android:spinnerStyle"
        android:layout_width="229dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:onClick="openDatePicker"
        android:text="@string/entry_date"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintStart_toEndOf="@+id/date_track"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/time_picker_button"
        style="?android:spinnerStyle"
        android:layout_width="229dp"
        android:layout_height="48dp"
        android:onClick="openTimePicker"
        android:text="@string/entry_time"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintBottom_toTopOf="@+id/location_menu"
        app:layout_constraintStart_toStartOf="@+id/date_picker_button"
        app:layout_constraintTop_toBottomOf="@+id/date_picker_button" />

    <Spinner
        android:id="@+id/location_menu"
        android:layout_width="233dp"
        android:layout_height="48dp"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintBottom_toBottomOf="@+id/location_track"
        app:layout_constraintStart_toStartOf="@+id/time_picker_button"
        app:layout_constraintTop_toTopOf="@+id/location_track"
        app:layout_constraintVertical_bias="0.476" />

    <Button
        android:id="@+id/Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="392dp"
        android:layout_height="211dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="280dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/urge_RB"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:padding="4dp"
            android:text="@string/urge"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/episode_RB"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:padding="4dp"
            android:text="@string/episode"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>